--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -21,7 +21,7 @@
                     <div class="navs-navs">
                         <a href="{% url 'products' %}" class="nav nav1">კაცები</a>
                         <a href="{% url 'products' %}" class="nav nav2">ქალები</a>
-                        <a href="{% url 'products' %}" class="nav nav3">ფასდაკლებები</a>
+                        <a href="{% url 'products' %}" class="nav nav3">აქსესუარები</a>
                         <a href="{% url 'profile' %}" class="nav nav4">პროფილი</a>
                         <a href="{% url 'cart' %}" class="nav nav5">კალათა</a>
                         <a href="{% url 'favorites' %}" class="nav nav6">ფავორიტები</a>
