--- a/basroba/app/templates/login.html
+++ b/basroba/app/templates/login.html
@@ -16,7 +16,7 @@
 
         <form action="{% url 'login' %}" method="POST" class="auth-form">
             <div class="form-group">
-                <input type="email" name="email" placeholder="Email" required>
+                <input type="email" name="username" placeholder="Email" required>
             </div>
             <div class="form-group">
                 <input type="password" name="password" placeholder="Password" required>
@@ -33,12 +33,12 @@
         <h1 class="auth-title">Create Account</h1>
         <p class="auth-subtitle">Sign up to get started</p>
 
-        <form action="/register/" method="POST" class="auth-form">
+        <form action="{% url 'register' %}" method="POST" class="auth-form">
             <div class="form-group">
                 <input type="text" name="name" placeholder="Full Name" required>
             </div>
             <div class="form-group">
-                <input type="email" name="email" placeholder="Email" required>
+                <input type="email" name="username" placeholder="Email" required>
             </div>
             <div class="form-group">
                 <input type="password" name="password" placeholder="Password" required>
