--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -91,20 +91,30 @@
         </div>
 
         <!-- Buttons -->
-        <div class="buttons-div" id="cart-button-div">
-            {% if does_user_have_in_favorites %}
-                <button id="favorite-button" class="first-button favorite-button2" type="button" onclick="toggle_favorite(true)">ფავორიტიდან ამოშლა</button>
-            {% else %}
-                <button id="favorite-button" class="first-button favorite-button2" type="button" onclick="toggle_favorite(false)">ფავორიტად არჩევა</button>
-            {% endif %}
+        {% if user.is_authenticated %}
+            <div class="buttons-div" id="cart-button-div">
+                {% if does_user_have_in_favorites %}
+                    <button id="favorite-button" class="first-button favorite-button2" type="button" onclick="toggle_favorite(true)">ფავორიტიდან ამოშლა</button>
+                {% else %}
+                    <button id="favorite-button" class="first-button favorite-button2" type="button" onclick="toggle_favorite(false)">ფავორიტად არჩევა</button>
+                {% endif %}
 
-            {% if does_user_own_product %}
-                <button id="cart-button" class="second-button add-to-cart-button2" type="button" onclick="toggleCart(true)">კალათიდან ამოშლა</button>
-            {% else %}
-                <button id="cart-button" class="second-button add-to-cart-button2" type="button" onclick="toggleCart(false)">კალათაში დამატება</button>
-            {% endif %}
-
-        </div>
+                {% if does_user_own_product %}
+                    <button id="cart-button" class="second-button add-to-cart-button2" type="button" onclick="toggleCart(true)">კალათიდან ამოშლა</button>
+                {% else %}
+                    <button id="cart-button" class="second-button add-to-cart-button2" type="button" onclick="toggleCart(false)">კალათაში დამატება</button>
+                {% endif %}
+            </div>
+        {% else %}
+            <div class="buttons-div" id="cart-button-div">
+                <a href="{% url 'login' %}?next={{ request.path }}">
+                    <button class="first-button favorite-button2" type="button">ფავორიტად არჩევა</button>
+                </a>
+                <a href="{% url 'login' %}?next={{ request.path }}">
+                    <button class="second-button add-to-cart-button2" type="button">კალათაში დამატება</button>
+                </a>
+            </div>
+        {% endif %}
     </div>
 </form>
 
