--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -19,12 +20,12 @@
 
                 <div id="menu-together">
                     <div class="navs-navs">
-                        <a href="{% url 'products' category_name='Male' %}" class="nav nav1">კაცები</a>
-                        <a href="{% url 'products' category_name='Female' %}" class="nav nav2">ქალები</a>
-                        <a href="{% url 'products' category_name='Accessories' %}" class="nav nav3">აქსესუარები</a>
-                        <a href="{% url 'profile' %}" class="nav nav4">პროფილი</a>
-                        <a href="{% url 'cart' %}" class="nav nav5">კალათა</a>
-                        <a href="{% url 'favorites' %}" class="nav nav6">ფავორიტები</a>
+                        <a href="{% url 'products' category_name='Male' %}" class="nav nav1">{% trans 'Male' %}</a>
+                        <a href="{% url 'products' category_name='Female' %}" class="nav nav2">{% trans 'Female' %}</a>
+                        <a href="{% url 'products' category_name='Accessories' %}" class="nav nav3">{% trans 'Accessories' %}</a>
+                        <a href="{% url 'profile' %}" class="nav nav4">{% trans 'Profile' %}</a>
+                        <a href="{% url 'cart' %}" class="nav nav5">{% trans 'Cart' %}</a>
+                        <a href="{% url 'favorites' %}" class="nav nav6">{% trans 'Favorites' %}</a>
                     </div>
 
 
