--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -20,7 +20,7 @@
 
                 <div id="menu-together">
                     <div class="navs-navs">
-                        <a href="{% url 'products' category_name='Male' %}" class="nav nav1">{{ t.Welcome }}</a>
+                        <a href="{% url 'products' category_name='Male' %}" class="nav nav1">კაცები</a>
                         <a href="{% url 'products' category_name='Female' %}" class="nav nav2">ქალები</a>
                         <a href="{% url 'products' category_name='Accessories' %}" class="nav nav3">აქსესუარები</a>
                         <a href="{% url 'profile' %}" class="nav nav4">პროფილი</a>
