--- a/basroba/app/templates/index.html
+++ b/basroba/app/templates/index.html
@@ -16,20 +16,26 @@
         <h1 class="section2-title">კატეგორიები</h1>
 
         <div class="categories-div">
-            <div class="category-1">
-                <img src="{% static 'pics/Picure2.png' %}" class="category-image" alt="">
-                <h1 class="category-text">Category 1</h1>
-            </div>
+            <a href="">
+                <div class="category-1">
+                    <img src="{% static 'pics/Picure2.png' %}" class="category-image" alt="">
+                    <h1 class="category-text">Category 1</h1>
+                </div>
+            </a>
 
-            <div class="category-2">
-                <img src="{% static 'pics/Picture3.png' %}" class="category-image" alt="">
-                <h1 class="category-text">Category 2</h1>
-            </div>
+            <a href="">
+                <div class="category-2">
+                    <img src="{% static 'pics/Picture3.png' %}" class="category-image" alt="">
+                    <h1 class="category-text">Category 2</h1>
+                </div>
+            </a>
 
-            <div class="category-3">
-                <img src="{% static 'pics/Picture4.png' %}" class="category-image" alt="">
-                <h1 class="category-text">Category 3</h1>
-            </div>
+            <a href="">
+                <div class="category-3">
+                    <img src="{% static 'pics/Picture4.png' %}" class="category-image" alt="">
+                    <h1 class="category-text">Category 3</h1>
+                </div>
+            </a>
         </div>
     </section>
 
