--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -34,32 +34,61 @@
 
 
                     <div class="navs-div">
-                        <a href="{% url 'favorites' %}" class="favorite-button" style="text-decoration: none; margin-right: 5px;">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                class="bi bi-heart-fill favorite-icon" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
-                            </svg>
-                        </a>
+                        {% if user.is_authenticated %}
+                            <a href="{% url 'favorites' %}" class="favorite-button" style="text-decoration: none; margin-right: 5px;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                    class="bi bi-heart-fill favorite-icon" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                                </svg>
+                            </a>
 
-                        <a href="{% url 'cart' %}" class="cart-button" style="text-decoration: none; margin-right: 5px;">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                class="bi bi-cart cart-icon" viewBox="0 0 16 16">
-                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 
-                                        0 0 1 .485.379L2.89 3H14.5a.5.5 
-                                        0 0 1 .491.592l-1.5 8A.5.5 
-                                        0 0 1 13 12H4a.5.5 
-                                        0 0 1-.491-.408L2.01 3.607 
-                                        1.61 2H.5a.5.5 
-                                        0 0 1-.5-.5M3.102 4l1.313 7h8.17 
-                                        l1.313-7zM5 12a2 2 0 1 0 0 4 
-                                        2 2 0 0 0 0-4m7 0a2 2 
-                                        0 1 0 0 4 2 2 0 0 0 
-                                        0-4m-7 1a1 1 0 1 1 0 2 
-                                        1 1 0 0 1 0-2m7 0a1 1 
-                                        0 1 1 0 2 1 1 0 0 1 0-2"/>
-                            </svg>
-                        </a>
+                            <a href="{% url 'cart' %}" class="cart-button" style="text-decoration: none; margin-right: 5px;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                    class="bi bi-cart cart-icon" viewBox="0 0 16 16">
+                                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 
+                                            0 0 1 .485.379L2.89 3H14.5a.5.5 
+                                            0 0 1 .491.592l-1.5 8A.5.5 
+                                            0 0 1 13 12H4a.5.5 
+                                            0 0 1-.491-.408L2.01 3.607 
+                                            1.61 2H.5a.5.5 
+                                            0 0 1-.5-.5M3.102 4l1.313 7h8.17 
+                                            l1.313-7zM5 12a2 2 0 1 0 0 4 
+                                            2 2 0 0 0 0-4m7 0a2 2 
+                                            0 1 0 0 4 2 2 0 0 0 
+                                            0-4m-7 1a1 1 0 1 1 0 2 
+                                            1 1 0 0 1 0-2m7 0a1 1 
+                                            0 1 1 0 2 1 1 0 0 1 0-2"/>
+                                </svg>
+                            </a>
+                        {% else %}
+                            <a href="{% url 'login' %}" class="favorite-button" style="text-decoration: none; margin-right: 5px;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                    class="bi bi-heart-fill favorite-icon" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                                </svg>
+                            </a>
+
+                            <a href="{% url 'login' %}" class="cart-button" style="text-decoration: none; margin-right: 5px;">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                    class="bi bi-cart cart-icon" viewBox="0 0 16 16">
+                                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 
+                                            0 0 1 .485.379L2.89 3H14.5a.5.5 
+                                            0 0 1 .491.592l-1.5 8A.5.5 
+                                            0 0 1 13 12H4a.5.5 
+                                            0 0 1-.491-.408L2.01 3.607 
+                                            1.61 2H.5a.5.5 
+                                            0 0 1-.5-.5M3.102 4l1.313 7h8.17 
+                                            l1.313-7zM5 12a2 2 0 1 0 0 4 
+                                            2 2 0 0 0 0-4m7 0a2 2 
+                                            0 1 0 0 4 2 2 0 0 0 
+                                            0-4m-7 1a1 1 0 1 1 0 2 
+                                            1 1 0 0 1 0-2m7 0a1 1 
+                                            0 1 1 0 2 1 1 0 0 1 0-2"/>
+                                </svg>
+                            </a>
+                        {% endif %}
 
 
                     </div>
