--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -20,8 +20,7 @@
 
                 <div id="menu-together">
                     <div class="navs-navs">
-                        <a href="{% url 'products' category_name='Male' %}" class="nav nav1">პროდუქტები</a>
-                        <a href="{% url 'products' category_name='Male' %}" class="nav nav1"></a>
+                        <a href="{% url 'products' category_name='all' %}" class="nav nav1">პროდუქტები</a>
                         {% if user.is_authenticated %}
                             <a href="{% url 'profile' %}" class="nav nav4">პროფილი</a>
                             <a href="{% url 'cart' %}" class="nav nav5">კალათა</a>
