--- a/basroba/app/templates/index.html
+++ b/basroba/app/templates/index.html
@@ -16,24 +16,24 @@
         <h1 class="section2-title">კატეგორიები</h1>
 
         <div class="categories-div">
-            <a href="{% url 'products' category_name='Male' %}" class="category-1" style="text-decoration: none; color: white;">
+            <a href="{% url 'products' category_name='Jacket' %}" class="category-1" style="text-decoration: none; color: white;">
                 <div class="category-1">
                     <img src="{% static 'pics/Picure2.png' %}" class="category-image" alt="">
-                    <h1 class="category-text">ქურთუკი</h1>
+                    <h1 class="category-text">Jacket</h1>
                 </div>
             </a>
 
-            <a href="{% url 'products' category_name='Female' %}" class="category-2" style="text-decoration: none; color: white;">
+            <a href="{% url 'products' category_name='Accessories' %}" class="category-2" style="text-decoration: none; color: white;">
                 <div class="category-2">
                     <img src="{% static 'pics/Picture3.png' %}" class="category-image" alt="">
-                    <h1 class="category-text">აქსესუარები</h1>
+                    <h1 class="category-text">Accessories</h1>
                 </div>
             </a>
 
-            <a href="{% url 'products' category_name='Accessories' %}" class="category-3" style="text-decoration: none; color: white;">
+            <a href="{% url 'products' category_name='Bags' %}" class="category-3" style="text-decoration: none; color: white;">
                 <div class="category-3">
                     <img src="{% static 'pics/Picture4.png' %}" class="category-image" alt="">
-                    <h1 class="category-text"></h1>
+                    <h1 class="category-text">Bags</h1>
                 </div>
             </a>
         </div>
