--- a/basroba/app/templates/layout.html
+++ b/basroba/app/templates/layout.html
@@ -20,13 +20,15 @@
 
                 <div id="menu-together">
                     <div class="navs-navs">
-                        <a href="{% url 'products' category_name='all' %}" class="nav nav1">პროდუქტები</a>
+                        <a href="{% url 'products' category_name='all' %}" class="nav nav1">Products</a>
+                        <a href="{% url 'products' category_name='all' %}" class="nav nav1">About Us</a>
+                        <a href="{% url 'products' category_name='all' %}" class="nav nav1">Contact</a>
                         {% if user.is_authenticated %}
-                            <a href="{% url 'profile' %}" class="nav nav4">პროფილი</a>
-                            <a href="{% url 'cart' %}" class="nav nav5">კალათა</a>
-                            <a href="{% url 'favorites' %}" class="nav nav6">ფავორიტები</a>
+                            <a href="{% url 'profile' %}" class="nav nav4">Profile</a>
+                            <a href="{% url 'cart' %}" class="nav nav5">Cart</a>
+                            <a href="{% url 'favorites' %}" class="nav nav6">Favorites</a>
                         {% else %}
-                            <a href="{% url 'login' %}" class="nav nav4">რეგისტრაცია</a>
+                            <a href="{% url 'login' %}" class="nav nav4">Register</a>
                         {% endif %}
                     </div>
 
@@ -126,11 +128,11 @@
                 </div>
 
                 <nav class="footer-nav">
-                    <a href="#">მთავარი</a>
-                    <a href="#">პროდუქტები</a>
-                    <a href="#">კალათა</a>
-                    <a href="#">ფავორიტები</a>
-                    <a href="#">პროფილი</a>
+                    <a href="{% url 'index' %}">Main</a>
+                    <a href="{% url 'products' category_name='all' %}">Products</a>
+                    <a href="{% url 'cart' %}">Cart</a>
+                    <a href="{% url 'favorites' %}">Favorites</a>
+                    <a href="{% url 'profile' %}">Profile</a>
                 </nav>
 
                 <div class="footer-made-by">
