--- a/basroba/app/templates/index.html
+++ b/basroba/app/templates/index.html
@@ -65,4 +65,35 @@
         </div>
     </section>
 
+    <script>
+        const videos = document.querySelectorAll(".video-slide");
+        const dots = document.querySelectorAll(".dot");
+        let currentIndex = 0;
+
+        function showVideo(index) {
+            videos.forEach((video, i) => {
+                video.classList.remove("active");
+                dots[i].classList.remove("active");
+                video.pause();
+                video.currentTime = 0;
+            });
+            videos[index].classList.add("active");
+            dots[index].classList.add("active");
+            videos[index].play();
+        }
+
+        videos.forEach((video, i) => {
+            video.addEventListener("ended", () => {
+                currentIndex = (i + 1) % videos.length;
+                showVideo(currentIndex);
+            });
+        });
+
+        dots.forEach((dot, i) => {
+            dot.addEventListener("click", () => {
+                currentIndex = i;
+                showVideo(currentIndex);
+            });
+        });
+    </script>
 {% endblock %}
