--- a/basroba/app/static/css/layout.css
+++ b/basroba/app/static/css/layout.css
@@ -11,7 +11,7 @@ a {
 body {
     padding: 0;
     margin: 0;
-    background-color: black;
+    background-color: white;
     overflow-x: hidden;
 }
 
@@ -24,7 +24,7 @@ nav {
     padding-top: 70px;
     padding-left: 40px;
     padding-right: 40px;
-    background-color: black;
+    background-color: white;
     padding-bottom: 20px;
 }
 
@@ -47,7 +47,7 @@ nav {
 .search-icon {
     width: 100%;
     height: 100%;
-    color: white;
+    color: black;
     position: relative;
 }
 
@@ -76,7 +76,7 @@ nav {
     font-size: 35px;
     font-family: "Nico Moji";
     font-weight: bold;
-    color: white;
+    color: black;
 }
 
 .website-title2 {
@@ -90,7 +90,7 @@ nav {
     font-size: 20px;
     font-weight: normal;
     font-family: "Nico Moji";
-    color: white;
+    color: black;
 }
 
 .navs-div {
@@ -113,7 +113,7 @@ nav {
     background: none;
     outline: none;
     border: none;
-    color: white;
+    color: black;
 }
 
 .cart-button {
@@ -123,7 +123,7 @@ nav {
     background: none;
     outline: none;
     border: none;
-    color: white; 
+    color: black; 
 }
 
 .lang-part {
@@ -143,7 +143,7 @@ nav {
     height: max-content;
     padding: 0;
     margin: 0;
-    color: white;
+    color: black;
     font-size: 20px;
 }
 
@@ -152,7 +152,7 @@ nav {
     top: 0;
     left: 0;
     background: none;
-    color: white;
+    color: black;
     outline: none;
     border: none;
     display: inline-block;
@@ -169,7 +169,7 @@ nav {
     margin: 0;
     font-size: 20px;
     font-weight: normal;
-    color: white;
+    color: black;
     align-items: center;
     justify-content: center;
     gap: 20px;
@@ -186,7 +186,7 @@ nav {
     margin: 0;
     font-size: 20px;
     font-weight: normal;
-    color: white;
+    color: black;
     text-decoration: none;
     display: inline-block;
 }
@@ -208,7 +208,7 @@ nav {
     left: 0;
     width: 100%;
     height: 10px;
-    background-color: white;
+    background-color: black;
     display: inline-block;
     transition: all 0.3s ease;
 }
@@ -358,12 +358,10 @@ nav {
 }
 
 
-        /* Make sure the footer is at the bottom */
         .content {
             flex-grow: 1;
         }
 
-        /* Footer container styles */
         .footer {
             background-color: #3A3A3A;
             color: white;
@@ -372,7 +370,6 @@ nav {
             border-top-right-radius: 0.75rem;
         }
 
-        /* Flex container for footer content */
         .footer-container {
             max-width: 1280px;
             margin-left: auto;
@@ -403,7 +400,6 @@ nav {
             }
         }
 
-        /* Left section styles */
         .footer-left {
             display: flex;
             flex-direction: column;
@@ -443,7 +439,6 @@ nav {
             border-radius: 0.375rem;
         }
 
-        /* Navigation styles */
         .footer-nav {
             display: flex;
             flex-direction: column;
@@ -468,7 +463,7 @@ nav {
         }
 
         .footer-nav a:hover {
-            color: white;
+            color: black;
         }
 
         /* "Made by" section styles */
@@ -499,17 +494,17 @@ nav {
 
 h1::selection {
   background: gray;
-  color: white;
+  color: black;
 }
 
 ::selection {
   background: gray;
-  color: white;
+  color: black;
 }
 
-.White {
-    background-color: white;
-    color: white;
+.black {
+    background-color: black;
+    color: black;
 }
 
 /* === Dark Scrollbar for WebKit browsers === */
@@ -524,17 +519,17 @@ h1::selection {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #5555ff; /* thumb color */
+    background-color: #0f0f0f; /* thumb color */
     border-radius: 8px;
-    border: 3px solid #121212; /* padding around thumb */
+    border: 3px solid #0f0f0f; /* padding around thumb */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #7777ff;
+    background-color: #0f0f0f;
 }
 
 /* === Dark Scrollbar for Firefox === */
 * {
     scrollbar-width: thin;
-    scrollbar-color: #5555ff #121212; /* thumb track */
+    scrollbar-color: #0f0f0f #121212; /* thumb track */
 }
