--- a/basroba/app/static/css/styles.css
+++ b/basroba/app/static/css/styles.css
@@ -26,7 +26,7 @@
     margin: 0;
     font-size: 35px;
     font-weight: bold;
-    color: white;
+    color: black;
     text-align: center;
     letter-spacing: 2rem;
 }
@@ -94,13 +94,13 @@
     text-align: left;
     font-size: 20px;
     font-weight: bold;
-    color: white;
+    color: black;
 }
 
 .section2 {
     padding: 40px 0;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     text-align: center;
 }
 
@@ -124,7 +124,7 @@
 }
 
 .product-card {
-    background: #111;
+    background: white;
     border-radius: 15px;
     overflow: hidden;
     padding: 15px;
